# ZopaDrumMachine

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/alfacerpro/com/zopadrammachine/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Kick.wav.asd  Snare.wav.asd
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  DrumMachine.cpp  DrumMachine.h  SimpleOscillator.cpp  SimpleOscillator.h  const.h  native-lib.cpp
app/src/main/cpp/bridge/: drum-machine.cpp  media-player.cpp  oscillator.cpp  piano.cpp
app/src/main/cpp/effects/: SimpleDelay.cpp  SimpleDelay.h
app/src/main/cpp/google/: Mixer.cpp  Mixer.h  RenderableAudio.h  SoundRecording.cpp  SoundRecording.h
app/src/main/cpp/instruments/: DrumMachine.cpp  DrumMachine.h  MediaPlayer.cpp  MediaPlayer.h  MultiFrequencyOscillator.cpp  MultiFrequencyOscillator.h  Piano.cpp  Piano.h  SimpleOscillator.cpp  SimpleOscillator.h
app/src/main/cpp/utils/: kiss_fft.h  kiss_fftr.c
app/src/main/java/alfacerpro/com/zopadrammachine/: App.kt  DrumMachine.kt  Utils.kt
app/src/main/java/alfacerpro/com/zopadrammachine/core/: AudioEngine.kt  DrumMachine.kt  MediaPlayer.kt  Piano.kt  SimpleOscillator.kt
app/src/main/java/alfacerpro/com/zopadrammachine/ui/: DrumMachineActivity.kt  LaunchActivity.kt  MainActivity.kt  MediaPlayerActivity.kt  PianoActivity.kt  WaveformActivity.kt
app/src/main/java/alfacerpro/com/zopadrammachine/ui/view/: FrequencyView.kt  PianoKeyboardView.kt  WaveformPlaybackView.kt  WaveformTimeControllerView.kt
app/src/main/java/alfacerpro/com/zopadrammachine/utils/: DimensionUtil.kt  DrumMachinePref.kt
app/src/main/java/alfacerpro/com/zopadrammachine/viewmodel/: AudioEngineViewModelBase.kt  DrumMachineAudioEngineViewModel.kt  DrumMachineViewModel.kt  PianoAudioEngineViewModel.kt
app/src/main/res/layout/: activity_launch.xml  activity_main.xml  activity_media_player.xml  activity_piano.xml  activity_waveform.xml
app/src/main/res/values/: dimens.xml  strings.xml
app/src/test/java/alfacerpro/com/zopadrammachine/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
liblame/: .gitignore  CMakeLists.txt  build.gradle
liblame/src/main/: AndroidManifest.xml
liblame/src/main/cpp/: machine.h
